--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta name="keywords" content="lista de tareas, to-do list, gestor de tareas diarias, organizador personal, productividad, planificación diaria, tareas pendientes, subtareas, prioridades, web app, enrique gil, ToDayList">
     <meta name="author" content="Enrique Gil">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://www.todaylist.es/"> <!-- URL ACTUALIZADA -->
+    <link rel="canonical" href="https://www.todaylist.es/">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.todaylist.es/"> <!-- URL ACTUALIZADA -->
+    <meta property="og:url" content="https://www.todaylist.es/">
     <meta property="og:title" content="ToDayList - Simplifica Tu Día, Organiza Tus Tareas">
     <meta property="og:description" content="Organiza tus pendientes con ToDayList: tu gestor de tareas diarias minimalista.">
     <meta property="og:image" content="https://www.todaylist.es/ToDayList.png">
@@ -22,7 +22,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://www.todaylist.es/"> <!-- URL ACTUALIZADA -->
+    <meta property="twitter:url" content="https://www.todaylist.es/">
     <meta property="twitter:title" content="ToDayList - Simplifica Tu Día, Organiza Tus Tareas">
     <meta property="twitter:description" content="Organiza tus pendientes con ToDayList: tu gestor de tareas diarias minimalista.">
     <meta property="twitter:image" content="https://www.todaylist.es/ToDayList.png">
@@ -44,7 +44,7 @@
       "applicationCategory": ["ProductivityApplication", "UtilityApplication"],
       "operatingSystem": "Web Browser",
       "description": "ToDayList es un gestor de tareas diarias minimalista y eficiente que te ayuda a organizar tus pendientes, establecer prioridades, añadir subtareas y fechas límite para mejorar tu productividad.",
-      "url": "https://www.todaylist.es/", /* URL ACTUALIZADA */
+      "url": "https://www.todaylist.es/",
       "author": {
         "@type": "Person",
         "name": "Enrique Gil"
@@ -55,15 +55,14 @@
         "priceCurrency": "USD"
       },
       "image": "https://www.todaylist.es/ToDayList.png",
-      "screenshot": "https://www.todaylist.es/images/todaylist-screenshot.jpg", /* URL ACTUALIZADA - Asegúrate de que la imagen exista en esta ruta en tu servidor */
-      "softwareVersion": "1.0.6", /* Actualiza la versión si es necesario */
-      "datePublished": "2024-03-11", /* Actualiza la fecha si es necesario */
+      "screenshot": "https://www.todaylist.es/images/todaylist-screenshot.jpg",
+      "softwareVersion": "1.0.6",
+      "datePublished": "2024-03-11",
       "keywords": "lista de tareas, to-do list, gestor de tareas diarias, productividad, organización, planificación, web app, tareas pendientes, subtareas, prioridades"
     }
     </script>
 
     <style>
-        /* --- Variables CSS (sin cambios) --- */
         :root {
             --bg-color: #f4f7f6;
             --text-color: #333;
@@ -129,7 +128,7 @@
             --sort-button-color: #bdc3c7;
             --sort-button-hover-color: #3498db;
             --checkbox-checkmark-color: var(--bg-color);
-            --footer-text-color: #777; /* Ligeramente más claro en modo oscuro */
+            --footer-text-color: #777;
             --medal-text-color: var(--text-color);
             --subtitle-color: #bdc3c7;
             --app-description-color: #a0a0a0;
@@ -145,13 +144,12 @@
             background-color: var(--bg-color);
             color: var(--text-color);
             line-height: 1.6;
-            /* padding-bottom original era 80px, aumentamos para el footer con logo */
-            padding-bottom: 120px; /* Aumentado para dar espacio al footer */
+            padding-bottom: 120px;
             transition: background-color 0.3s ease, color 0.3s ease;
             display: flex;
             flex-direction: column;
             align-items: center;
-            min-height: 100vh; /* Asegura que el footer esté abajo si hay poco contenido */
+            min-height: 100vh;
             box-sizing: border-box;
         }
 
@@ -160,9 +158,9 @@
             max-width: 600px;
             padding: 0 10px;
             box-sizing: border-box;
-            flex-grow: 1; /* Permite que el contenido empuje el footer hacia abajo */
+            flex-grow: 1;
             position: relative;
-            padding-bottom: 20px; /* Espacio antes del footer dentro del container */
+            padding-bottom: 20px;
         }
 
         h1 {
@@ -277,6 +275,84 @@
              outline: 3px solid var(--button-hover-color);
              outline-offset: 2px;
         }
+
+        /* --- ESTILOS PARA LA SECCIÓN DE INSTALACIÓN (REVISADOS PARA COMPACIDAD) --- */
+        #install-instructions-section {
+            margin-top: 20px;
+            margin-bottom: 30px;
+            padding: 18px 22px;
+            background-color: var(--item-bg);
+            border: 1px solid var(--border-color);
+            border-radius: 10px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.07);
+            font-size: 0.85rem;
+            color: var(--text-color);
+        }
+
+        #install-instructions-section h4 {
+            font-family: 'Quicksand', sans-serif;
+            font-size: 1.2rem;
+            color: var(--heading-color);
+            margin-top: 0;
+            margin-bottom: 8px;
+            text-align: center;
+        }
+
+        #install-instructions-section p {
+            font-size: 0.95em;
+            color: var(--text-color);
+            margin-bottom: 12px;
+            line-height: 1.45;
+            text-align: center;
+        }
+
+        #install-instructions-section ul {
+            list-style: none;
+            padding-left: 5px;
+            margin: 0 auto;
+            max-width: 480px;
+        }
+
+        #install-instructions-section ul li {
+            margin-bottom: 8px;
+            line-height: 1.5;
+            font-size: 0.92em;
+            padding-left: 25px;
+            position: relative;
+            text-align: left;
+        }
+
+        #install-instructions-section ul li::before {
+            font-family: "Font Awesome 6 Free";
+            font-weight: 900; /* Para 'fab' iconos */
+            position: absolute;
+            left: 0px;
+            top: 1px;
+            width: 20px;
+            text-align: center;
+            color: var(--button-color);
+            font-size: 1.1em;
+        }
+
+        #install-instructions-section ul li:nth-child(1)::before { content: "\f38e"; } /* fab fa-chrome */
+        #install-instructions-section ul li:nth-child(2)::before { content: "\f17b"; } /* fab fa-android */
+        #install-instructions-section ul li:nth-child(3)::before { content: "\f179"; } /* fab fa-apple */
+        #install-instructions-section ul li:nth-child(4)::before { content: "\f267"; } /* fab fa-safari */
+
+        #install-instructions-section ul li strong {
+            color: var(--heading-color);
+            font-weight: 700;
+        }
+
+        #install-instructions-section ul li i.fas.fa-download,
+        #install-instructions-section ul li i.fas.fa-ellipsis-v,
+        #install-instructions-section ul li i.fas.fa-share-square {
+            color: var(--button-hover-color);
+            margin-left: 0.1em;
+            margin-right: 0.1em;
+            font-size: 0.9em;
+        }
+        /* --- FIN ESTILOS SECCIÓN DE INSTALACIÓN --- */
 
         .hidden {
             display: none !important;
@@ -901,30 +977,94 @@
             margin-right: 5px;
         }
 
-        /* Footer con logo */
+        /* --- ESTILOS PARA EL BOTÓN DE INFORMACIÓN (MÁS DISCRETO) --- */
+        #info-button {
+            position: absolute;
+            top: 15px;
+            left: 15px;
+            font-family: 'Quicksand', sans-serif; 
+            font-weight: bold; 
+            font-size: 1.3rem;  
+            color: var(--button-color);
+            background-color: var(--item-bg);
+            border: 1px solid var(--border-color); 
+            border-radius: 50%;
+            width: 36px;  
+            height: 36px; 
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-decoration: none; 
+            box-shadow: 0 1px 3px rgba(0,0,0,0.1); 
+            z-index: 900;
+            line-height: 1; 
+            padding: 0; 
+            transition: color 0.2s ease, background-color 0.2s ease, border-color 0.2s ease;
+        }
+        #info-button:hover {
+            color: var(--button-hover-color);
+            background-color: var(--fixed-button-bg); 
+            border-color: var(--button-hover-color);
+        }
+
+        /* Footer */
         footer {
             display: flex;
+            flex-direction: column; 
             align-items: center;
             justify-content: center;
             text-align: center;
-            font-size: 0.8rem; /* Ajustado para el texto y el logo */
+            font-size: 0.8rem; 
             color: var(--footer-text-color);
-            margin-top: 40px;
-            padding: 15px 10px; /* Un poco más de padding */
+            margin-top: 30px; 
+            padding: 20px 10px 15px; 
             width: 100%;
-            max-width: 600px; /* Coincide con el .container */
+            max-width: 600px;
             box-sizing: border-box;
-            border-top: 1px solid var(--border-color); /* Línea sutil arriba */
+            border-top: 1px solid var(--border-color);
         }
         .footer-logo {
-            width: 24px; /* Tamaño del logo en el footer */
-            height: 24px;
-            margin-right: 8px; /* Espacio entre logo y texto */
-            vertical-align: middle; /* Ayuda a alinear si no se usa flex */
+            width: 48px;  
+            height: 48px; 
+            margin-bottom: 10px; 
         }
-        .footer-text { /* Estilos específicos para el texto del footer si es necesario */
-            margin: 0; /* Resetear margen del párrafo si se usa */
-            color: var(--footer-text-color);
+        .footer-text {
+            margin: 0 0 8px 0; 
+            color: var(--footer-text-color); 
+            font-size: 0.85em; 
+        }
+
+        #support-section-footer {
+            margin-top: 5px; 
+            display: flex;
+            flex-direction: column; 
+            align-items: center; 
+        }
+
+        .support-intro-text { 
+            font-size: 0.7rem; 
+            color: var(--legend-text-color); 
+            margin-bottom: 3px; 
+            line-height: 1.3; 
+        }
+
+        .paypal-link-footer {
+            display: inline-flex;
+            align-items: center;
+            font-size: 0.7rem; 
+            color: var(--legend-text-color); 
+            text-decoration: none;
+            transition: color 0.2s ease;
+        }
+
+        .paypal-link-footer:hover {
+            color: var(--button-hover-color); 
+            text-decoration: underline;
+        }
+
+        .paypal-link-footer i.fab.fa-paypal {
+            margin-right: 4px; 
+            font-size: 0.9em;  
         }
 
 
@@ -939,12 +1079,12 @@
             .app-description-static {
                 font-size: 0.85rem;
             }
-            #info-button {
-                top: 10px;
+            #info-button { /* Ajuste responsivo para el botón de info */
+                font-size: 1.2rem;
+                width: 32px;
+                height: 32px;
+                top: 10px; /* Ajustado para que no esté tan pegado al borde */
                 left: 10px;
-                font-size: 1.5rem;
-                width: 38px;
-                height: 38px;
             }
             .todo-item .main-task-header {
                 row-gap: 8px;
@@ -981,35 +1121,44 @@
                 padding: 10px 20px;
                 font-size: 1rem;
             }
+
+            #install-instructions-section {
+                padding: 15px 18px;
+                font-size: 0.8rem;
+            }
+            #install-instructions-section h4 {
+                font-size: 1.1rem;
+            }
+            #install-instructions-section ul li {
+                font-size: 0.95em;
+                padding-left: 22px;
+                margin-bottom: 7px;
+            }
+            #install-instructions-section ul li::before {
+                top: 0px;
+                font-size: 1em;
+            }
+            
             footer {
-                font-size: 0.75rem; /* Texto un poco más pequeño en móvil */
+                font-size: 0.75rem; 
+                padding-top: 15px; 
             }
             .footer-logo {
-                width: 20px;
-                height: 20px;
+                width: 40px; 
+                height: 40px;
+                margin-bottom: 8px;
             }
-        }
-
-        #info-button {
-            position: absolute;
-            top: 15px;
-            left: 15px;
-            font-size: 1.6rem;
-            color: var(--button-color);
-            z-index: 900;
-            padding: 8px;
-            background-color: var(--item-bg);
-            border-radius: 50%;
-            box-shadow: var(--fixed-button-shadow);
-            width: 40px;
-            height: 40px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        #info-button:hover {
-            color: var(--button-hover-color);
-            background-color: var(--fixed-button-bg);
+            .footer-text {
+                margin-bottom: 6px;
+                font-size: 0.9em; 
+            }
+            .support-intro-text,
+            .paypal-link-footer {
+                font-size: 0.7em; 
+            }
+            .support-intro-text {
+                margin-bottom: 2px;
+            }
         }
 
         .modal-overlay {
@@ -1108,7 +1257,7 @@
 
     <div class="container">
         <button id="info-button" class="app-button" aria-label="Información de la aplicación" title="Cómo usar la aplicación">
-            <i class="fas fa-info-circle"></i>
+            i
         </button>
         <h1>ToDayList</h1>
         <h2 class="subtitle">Tu Gestor de Tareas Diarias</h2>
@@ -1139,6 +1288,17 @@
                 ¡Comienza a organizar tu día ahora!
             </p>
             <button id="start-app-button" class="app-button">Empezar a Organizar</button>
+        </section>
+
+        <section id="install-instructions-section" class="hidden">
+            <h4>¡Acceso Rápido a ToDayList!</h4>
+            <p>Guarda ToDayList en tu dispositivo para acceder como una app:</p>
+            <ul>
+                <li><strong>Chrome (Escritorio):</strong> Clic en el icono <i class="fas fa-download" title="Instalar"></i> en la barra de direcciones, o Menú (<i class="fas fa-ellipsis-v"></i>) → "Instalar ToDayList".</li>
+                <li><strong>Android (Chrome):</strong> Menú (<i class="fas fa-ellipsis-v"></i>) → "Instalar aplicación" o "Añadir a pantalla de inicio".</li>
+                <li><strong>iPhone/iPad (Safari):</strong> Icono Compartir (<i class="fas fa-share-square" title="Compartir"></i>) → "Añadir a pantalla de inicio".</li>
+                <li><strong>Mac (Safari):</strong> Desde el menú "Archivo" → "Añadir al Dock".</li>
+            </ul>
         </section>
 
         <div id="app-main-interface" class="hidden">
@@ -1179,14 +1339,21 @@
                     <i class="fas fa-file-import"></i> Importar
                 </button>
             </div>
-        </div>
+
+        </div> <!-- Fin de #app-main-interface -->
 
     </div> <!-- Fin de .container -->
 
-    <!-- Footer fuera del .container principal para que ocupe el ancho del body si es necesario, pero centrado con max-width -->
     <footer>
         <img src="https://www.todaylist.es/ToDayList.png" alt="Logo ToDayList" class="footer-logo">
         <p class="footer-text">WebApp creada por Henry Gil</p>
+        
+        <div id="support-section-footer">
+            <p class="support-intro-text">¿Te gusta ToDayList? Si te ha sido útil...</p>
+            <a href="https://paypal.me/todaylistHenry" target="_blank" rel="noopener noreferrer" class="paypal-link-footer">
+                <i class="fab fa-paypal"></i> Apoya este proyecto
+            </a>
+        </div>
     </footer>
 
     <button id="dark-mode-toggle" class="app-button" aria-label="Alternar modo oscuro/claro"><i class="fas fa-moon"></i></button>
@@ -1241,6 +1408,7 @@
         let welcomeSection;
         let startAppButton;
         let appMainInterface;
+        let installInstructionsSection;
 
 
         let todos = [];
@@ -1653,6 +1821,7 @@
 
         function showAppInterface() {
             if (welcomeSection) welcomeSection.classList.add('hidden');
+            if (installInstructionsSection) installInstructionsSection.classList.add('hidden');
             if (appMainInterface) appMainInterface.classList.remove('hidden');
             if (todoInput) todoInput.focus();
         }
@@ -1709,8 +1878,9 @@
                 todos.splice(taskIndex, 1);
                 saveTodosToLocalStorage();
                 syncAndRender();
-                if (todos.length === 0 && welcomeSection && appMainInterface) {
+                if (todos.length === 0 && welcomeSection && appMainInterface && installInstructionsSection) {
                     welcomeSection.classList.remove('hidden');
+                    installInstructionsSection.classList.remove('hidden');
                     appMainInterface.classList.add('hidden');
                 }
             }
@@ -1912,7 +2082,14 @@
                     }));
 
                     saveTodosToLocalStorage();
-                    showAppInterface();
+
+                    if (todos.length === 0) {
+                        if (welcomeSection) welcomeSection.classList.remove('hidden');
+                        if (installInstructionsSection) installInstructionsSection.classList.remove('hidden');
+                        if (appMainInterface) appMainInterface.classList.add('hidden');
+                    } else {
+                        showAppInterface();
+                    }
                     syncAndRender();
 
                     alert('Datos importados exitosamente.');
@@ -1955,6 +2132,7 @@
             welcomeSection = document.getElementById('welcome-section');
             startAppButton = document.getElementById('start-app-button');
             appMainInterface = document.getElementById('app-main-interface');
+            installInstructionsSection = document.getElementById('install-instructions-section');
 
 
             if (localStorage.getItem(THEME_STORAGE_KEY) === 'dark') {
@@ -1967,9 +2145,11 @@
 
             if (todos.length === 0) {
                 if (welcomeSection) welcomeSection.classList.remove('hidden');
+                if (installInstructionsSection) installInstructionsSection.classList.remove('hidden');
                 if (appMainInterface) appMainInterface.classList.add('hidden');
             } else {
                 if (welcomeSection) welcomeSection.classList.add('hidden');
+                if (installInstructionsSection) installInstructionsSection.classList.add('hidden');
                 if (appMainInterface) appMainInterface.classList.remove('hidden');
                 renderTodosUI();
             }
