--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
              outline-offset: 2px;
         }
 
-        /* --- ESTILOS PARA LA SECCIÓN DE INSTALACIÓN (REVISADOS PARA COMPACIDAD) --- */
+        /* --- ESTILOS PARA LA SECCIÓN DE INSTALACIÓN (CON ICONOS CORREGIDOS) --- */
         #install-instructions-section {
             margin-top: 20px;
             margin-bottom: 30px;
@@ -317,27 +317,29 @@
             margin-bottom: 8px;
             line-height: 1.5;
             font-size: 0.92em;
-            padding-left: 25px;
+            padding-left: 25px; 
             position: relative;
             text-align: left;
         }
 
         #install-instructions-section ul li::before {
-            font-family: "Font Awesome 6 Free";
-            font-weight: 900; /* Para 'fab' iconos */
+            font-family: "Font Awesome 6 Brands", "Font Awesome 6 Free"; 
+            font-weight: 400; /* Para iconos de marca (fab) en FA6 */
             position: absolute;
             left: 0px;
-            top: 1px;
-            width: 20px;
+            top: 1px; 
+            width: 20px; 
             text-align: center;
             color: var(--button-color);
-            font-size: 1.1em;
+            font-size: 1.1em; 
+            -webkit-font-smoothing: antialiased; 
+            -moz-osx-font-smoothing: grayscale; 
         }
 
-        #install-instructions-section ul li:nth-child(1)::before { content: "\f38e"; } /* fab fa-chrome */
-        #install-instructions-section ul li:nth-child(2)::before { content: "\f17b"; } /* fab fa-android */
-        #install-instructions-section ul li:nth-child(3)::before { content: "\f179"; } /* fab fa-apple */
-        #install-instructions-section ul li:nth-child(4)::before { content: "\f267"; } /* fab fa-safari */
+        #install-instructions-section ul li:nth-child(1)::before { content: "\f268"; } /* Chrome */
+        #install-instructions-section ul li:nth-child(2)::before { content: "\f17b"; } /* Android */
+        #install-instructions-section ul li:nth-child(3)::before { content: "\f179"; } /* Apple */
+        #install-instructions-section ul li:nth-child(4)::before { content: "\f267"; } /* Safari */
 
         #install-instructions-section ul li strong {
             color: var(--heading-color);
@@ -1079,11 +1081,11 @@
             .app-description-static {
                 font-size: 0.85rem;
             }
-            #info-button { /* Ajuste responsivo para el botón de info */
+            #info-button {
                 font-size: 1.2rem;
                 width: 32px;
                 height: 32px;
-                top: 10px; /* Ajustado para que no esté tan pegado al borde */
+                top: 10px;
                 left: 10px;
             }
             .todo-item .main-task-header {
