--- a/back.html
+++ b/back.html
@@ -1296,10 +1296,10 @@
             <h4>¡Acceso Rápido a ToDayList!</h4>
             <p>Guarda ToDayList en tu dispositivo para acceder como una app:</p>
             <ul>
-                <li><strong>Chrome (Escritorio):</strong> Clic en el icono <i class="fas fa-download" title="Instalar"></i> en la barra de direcciones, o Menú (<i class="fas fa-ellipsis-v"></i>) → "Instalar ToDayList".</li>
-                <li><strong>Android (Chrome):</strong> Menú (<i class="fas fa-ellipsis-v"></i>) → "Instalar aplicación" o "Añadir a pantalla de inicio".</li>
-                <li><strong>iPhone/iPad (Safari):</strong> Icono Compartir (<i class="fas fa-share-square" title="Compartir"></i>) → "Añadir a pantalla de inicio".</li>
-                <li><strong>Mac (Safari):</strong> Desde el menú "Archivo" → "Añadir al Dock".</li>
+                <li><strong>Chrome (Escritorio):</strong> Clic en el icono <i class="fas fa-download" title="Instalar"></i> en la barra de direcciones, o Menú (<i class="fas fa-ellipsis-v"></i>) &rarr; "Instalar ToDayList".</li>
+                <li><strong>Android (Chrome):</strong> Menú (<i class="fas fa-ellipsis-v"></i>) &rarr; "Instalar aplicación" o "Añadir a pantalla de inicio".</li>
+                <li><strong>iPhone/iPad (Safari):</strong> Icono Compartir (<i class="fas fa-share-square" title="Compartir"></i>) &rarr; "Añadir a pantalla de inicio".</li>
+                <li><strong>Mac (Safari):</strong> Desde el menú "Archivo" &rarr; "Añadir al Dock".</li>
             </ul>
         </section>
 
