--- a/index.html
+++ b/index.html
@@ -198,14 +198,15 @@
 
   <!-- SDK modular de Firebase -->
   <script type="module">
-    // TODO: Reemplaza esto con tu configuración de Firebase
+    // Tu configuración de Firebase
     const firebaseConfig = {
-      apiKey: "TU_API_KEY",
-      authDomain: "TU_AUTH_DOMAIN",
-      projectId: "TU_PROJECT_ID",
-      storageBucket: "TU_STORAGE_BUCKET",
-      messagingSenderId: "TU_MESSAGING_SENDER_ID",
-      appId: "TU_APP_ID"
+      apiKey: "AIzaSyDyJ0DJ-4jgzyT1kf5U4mBZLZJVT_MQ2To",
+      authDomain: "todaylist-43353.firebaseapp.com",
+      projectId: "todaylist-43353",
+      storageBucket: "todaylist-43353.firebasestorage.app",
+      messagingSenderId: "673096442524",
+      appId: "1:673096442524:web:8d5e35e3cb1a5a9a7c4359",
+      measurementId: "G-M5TSNXX2DX"
     };
 
     import { initializeApp }  from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
