--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
+    <!-- Link to external CSS file -->
     <link rel="stylesheet" href="style.css">
 
     <!-- Schema.org markup for Google -->
@@ -66,89 +67,107 @@
 </head>
 <body>
 
-  <section id="authBox">
-    <h2>Acceder a ToDayList</h2>
-    <button id="btnGoogle" class="app-button"> <i class="fab fa-google"></i> Entrar con Google</button>
-    <p id="authStatus"></p>
-  </section>
-
-  <div id="app" class="container" hidden>
-    <button id="info-button" class="app-button" aria-label="Información de la aplicación" title="Cómo usar la aplicación">
-        i
-    </button>
-    <h1>ToDayList</h1>
-    <h2 class="subtitle">Tu Gestor de Tareas Diarias</h2>
-    <p class="app-description-static">
-        Organiza tu día y aumenta tu productividad de forma sencilla y eficaz.
-    </p>
-
-    <section id="welcome-section" class="hidden">
-        <img src="https://www.todaylist.es/ToDayList.png" alt="ToDayList Icono" class="welcome-icon">
-        <h2>¡Bienvenido a ToDayList!</h2>
-        <p>
-            ToDayList es más que una simple lista de tareas. Es una aplicación web diseñada para ayudarte
-            a gestionar tu tiempo y tus proyectos de manera eficiente. Descubre cómo ToDayList puede transformar
-            tu productividad diaria:
-        </p>
-        <ul>
-            <li><strong>Gestión Intuitiva de Tareas:</strong> Crea, edita y organiza tus tareas fácilmente.</li>
-            <li><strong>Subtareas Detalladas:</strong> Desglosa tareas complejas en pasos manejables.</li>
-            <li><strong>Prioridades Visuales:</strong> Asigna colores para enfocarte en lo importante.</li>
-            <li><strong>Fechas Límite Claras:</strong> Establece fechas de vencimiento para no olvidar nada.</li>
-            <li><strong>Enlaces Relevantes:</strong> Asocia URLs directamente a tus tareas.</li>
-            <li><strong>Modo Oscuro/Claro:</strong> Adapta la interfaz a tus preferencias visuales.</li>
-            <li><strong>Progreso y Motivación:</strong> Visualiza el avance y gana medallas por completar tareas.</li>
-            <li><strong>Sincronización en la Nube:</strong> Tus datos se guardan y sincronizan con Firebase.</li>
-            <li><strong>Anotaciones Rápidas:</strong> Un espacio para tomar notas sin crear una tarea formal.</li>
-        </ul>
-        <p>
-            ¡Comienza a organizar tu día ahora!
-        </p>
-        <!-- <button id="start-app-button" class="app-button">Empezar a Organizar</button> -->
+    <!-- Authentication Box (Initially visible) -->
+    <section id="authBox">
+        <h2>Acceder a ToDayList</h2>
+        <button id="btnGoogle" class="app-button"> <i class="fab fa-google"></i> Entrar con Google</button>
+        <p id="authStatus"></p>
     </section>
 
-    <section id="install-instructions-section" class="hidden">
-        <h4>¡Acceso Rápido a ToDayList!</h4>
-        <p>Guarda ToDayList en tu dispositivo para acceder como una app:</p>
-        <ul>
-            <li><strong>Chrome (Escritorio):</strong> Clic en el icono <i class="fas fa-download" title="Instalar"></i> en la barra de direcciones, o Menú (<i class="fas fa-ellipsis-v"></i>) → "Instalar ToDayList".</li>
-            <li><strong>Android (Chrome):</strong> Menú (<i class="fas fa-ellipsis-v"></i>) → "Instalar aplicación" o "Añadir a pantalla de inicio".</li>
-            <li><strong>iPhone/iPad (Safari):</strong> Icono Compartir (<i class="fas fa-share-square" title="Compartir"></i>) → "Añadir a pantalla de inicio".</li>
-            <li><strong>Mac (Safari):</strong> Desde el menú "Archivo" → "Añadir al Dock".</li>
-        </ul>
-    </section>
-
-    <div id="medal-counter-container">
-        <i class="fas fa-medal"></i> <span id="medal-count">0</span>
-    </div>
-
-    <ul id="todo-list"></ul>
-    <div id="todo-input-container">
-        <input type="text" id="new-todo-input" placeholder="Agregar nueva tarea..." aria-label="Agregar nueva tarea">
-        <button id="add-todo-button" class="app-button add-button" aria-label="Agregar Tarea"><i class="fas fa-plus"></i></button>
-        <button id="reorder-button" class="app-button sort-button" aria-label="Reordenar Tareas"><i class="fas fa-sort-amount-down-alt"></i></button>
-    </div>
-    <div id="priority-legend">
-        Prioridad:
-        <span class="priority-legend-item"><span class="priority-color-label" data-color="red"></span>Urgente</span>
-        >
-        <span class="priority-legend-item"><span class="priority-color-label" data-color="orange"></span>Alta</span>
-        >
-        <span class="priority-legend-item"><span class="priority-color-label" data-color="yellow"></span>No Olvidar</span>
-        >
-        <span class="priority-legend-item"><span class="priority-color-label" data-color="green"></span>Puede Esperar</span>
-    </div>
-
-    <div id="quick-notes-container">
-        <textarea id="quick-notes-area" placeholder="Anotaciones rápidas (se guardan en la nube)." aria-label="Anotaciones rápidas"></textarea>
-        <button id="clear-notes-button" class="app-button" aria-label="Borrar anotaciones">
-            <i class="fas fa-eraser"></i> Borrar
+    <!-- Main App Interface (Initially hidden) -->
+    <div id="app-main-interface" class="container" hidden>
+        <button id="info-button" class="app-button" aria-label="Información de la aplicación" title="Cómo usar la aplicación">
+            i
         </button>
-    </div>
+        <h1>ToDayList</h1>
+        <h2 class="subtitle">Tu Gestor de Tareas Diarias</h2>
+        <p class="app-description-static">
+            Organiza tu día y aumenta tu productividad de forma sencilla y eficaz.
+        </p>
 
-    <div id="user-controls" style="text-align: center; margin-top: 20px;">
-        <button id="logoutButton" class="app-button"><i class="fas fa-sign-out-alt"></i> Salir</button>
-    </div>
+        <section id="welcome-section" class="hidden">
+            <img src="https://www.todaylist.es/ToDayList.png" alt="ToDayList Icono" class="welcome-icon">
+            <h2>¡Bienvenido a ToDayList!</h2>
+            <p>
+                ToDayList es más que una simple lista de tareas. Es una aplicación web diseñada para ayudarte
+                a gestionar tu tiempo y tus proyectos de manera eficiente. Descubre cómo ToDayList puede transformar
+                tu productividad diaria:
+            </p>
+            <ul>
+                <li><strong>Gestión Intuitiva de Tareas:</strong> Crea, edita y organiza tus tareas fácilmente.</li>
+                <li><strong>Subtareas Detalladas:</strong> Desglosa tareas complejas en pasos manejables.</li>
+                <li><strong>Prioridades Visuales:</strong> Asigna colores para enfocarte en lo importante.</li>
+                <li><strong>Fechas Límite Claras:</strong> Establece fechas de vencimiento para no olvidar nada.</li>
+                <li><strong>Enlaces Relevantes:</strong> Asocia URLs directamente a tus tareas.</li>
+                <li><strong>Modo Oscuro/Claro:</strong> Adapta la interfaz a tus preferencias visuales.</li>
+                <li><strong>Progreso y Motivación:</strong> Visualiza el avance y gana medallas por completar tareas.</li>
+                <li><strong>Sincronización en la Nube:</strong> Tus datos se guardan y sincronizan con Firebase.</li>
+                <li><strong>Anotaciones Rápidas:</strong> Un espacio para tomar notas sin crear una tarea formal.</li>
+            </ul>
+            <p>
+                ¡Comienza a organizar tu día ahora!
+            </p>
+            <!-- This button is no longer needed as auth state handles showing the app -->
+            <!-- <button id="start-app-button" class="app-button">Empezar a Organizar</button> -->
+        </section>
+
+        <section id="install-instructions-section" class="hidden">
+            <h4>¡Acceso Rápido a ToDayList!</h4>
+            <p>Guarda ToDayList en tu dispositivo para acceder como una app:</p>
+            <ul>
+                <li><strong>Chrome (Escritorio):</strong> Clic en el icono <i class="fas fa-download" title="Instalar"></i> en la barra de direcciones, o Menú (<i class="fas fa-ellipsis-v"></i>) → "Instalar ToDayList".</li>
+                <li><strong>Android (Chrome):</strong> Menú (<i class="fas fa-ellipsis-v"></i>) → "Instalar aplicación" o "Añadir a pantalla de inicio".</li>
+                <li><strong>iPhone/iPad (Safari):</strong> Icono Compartir (<i class="fas fa-share-square" title="Compartir"></i>) → "Añadir a pantalla de inicio".</li>
+                <li><strong>Mac (Safari):</strong> Desde el menú "Archivo" → "Añadir al Dock".</li>
+            </ul>
+        </section>
+
+        <div id="medal-counter-container">
+            <i class="fas fa-medal"></i> <span id="medal-count">0</span>
+        </div>
+
+        <ul id="todo-list"></ul>
+        <div id="todo-input-container">
+            <input type="text" id="new-todo-input" placeholder="Agregar nueva tarea..." aria-label="Agregar nueva tarea">
+            <button id="add-todo-button" class="app-button add-button" aria-label="Agregar Tarea"><i class="fas fa-plus"></i></button>
+            <button id="reorder-button" class="app-button sort-button" aria-label="Reordenar Tareas"><i class="fas fa-sort-amount-down-alt"></i></button>
+        </div>
+        <div id="priority-legend">
+            Prioridad:
+            <span class="priority-legend-item"><span class="priority-color-label" data-color="red"></span>Urgente</span>
+            >
+            <span class="priority-legend-item"><span class="priority-color-label" data-color="orange"></span>Alta</span>
+            >
+            <span class="priority-legend-item"><span class="priority-color-label" data-color="yellow"></span>No Olvidar</span>
+            >
+            <span class="priority-legend-item"><span class="priority-color-label" data-color="green"></span>Puede Esperar</span>
+        </div>
+
+        <div id="quick-notes-container">
+            <textarea id="quick-notes-area" placeholder="Anotaciones rápidas (se guardan en la nube)." aria-label="Anotaciones rápidas"></textarea>
+            <button id="clear-notes-button" class="app-button" aria-label="Borrar anotaciones">
+                <i class="fas fa-eraser"></i> Borrar
+            </button>
+        </div>
+
+        <!-- Data Management (Export/Import - Removed with Firebase) -->
+        <!--
+        <div id="data-management-container">
+            <button id="export-data-button" class="app-button" aria-label="Exportar datos">
+                <i class="fas fa-file-export"></i> Exportar
+            </button>
+            <input type="file" id="import-file-input" accept=".json" style="display: none;">
+            <button id="import-data-button" class="app-button" aria-label="Importar datos">
+                <i class="fas fa-file-import"></i> Importar
+            </button>
+        </div>
+        -->
+
+        <div id="user-controls" style="text-align: center; margin-top: 20px;">
+            <button id="logoutButton" class="app-button"><i class="fas fa-sign-out-alt"></i> Salir</button>
+        </div>
+
+    </div> <!-- Fin de #app-main-interface -->
 
     <footer>
         <img src="https://www.todaylist.es/ToDayList.png" alt="Logo ToDayList" class="footer-logo">
@@ -192,49 +211,47 @@
         </div>
     </div>
 
-  </div> <!-- Fin de #app y .container -->
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+    <!-- SDK modular de Firebase -->
+    <script type="module">
+      // Tu configuración de Firebase
+      const firebaseConfig = {
+        apiKey: "AIzaSyDyJ0DJ-4jgzyT1kf5U4mBZLZJVT_MQ2To",
+        authDomain: "todaylist-43353.firebaseapp.com",
+        projectId: "todaylist-43353",
+        storageBucket: "todaylist-43353.firebasestorage.app",
+        messagingSenderId: "673096442524",
+        appId: "1:673096442524:web:8d5e35e3cb1a5a9a7c4359",
+        measurementId: "G-M5TSNXX2DX"
+      };
 
-  <!-- SDK modular de Firebase -->
-  <script type="module">
-    // Tu configuración de Firebase
-    const firebaseConfig = {
-      apiKey: "AIzaSyDyJ0DJ-4jgzyT1kf5U4mBZLZJVT_MQ2To",
-      authDomain: "todaylist-43353.firebaseapp.com",
-      projectId: "todaylist-43353",
-      storageBucket: "todaylist-43353.firebasestorage.app",
-      messagingSenderId: "673096442524",
-      appId: "1:673096442524:web:8d5e35e3cb1a5a9a7c4359",
-      measurementId: "G-M5TSNXX2DX"
-    };
+      import { initializeApp }  from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
+      import { getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js";
+      import { getFirestore, collection, doc, getDoc, setDoc, addDoc, updateDoc, deleteDoc, query, orderBy, onSnapshot, writeBatch } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js";
 
-    import { initializeApp }  from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
-    import { getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js";
-    import { getFirestore, collection, doc, getDoc, setDoc, addDoc, updateDoc, deleteDoc, query, orderBy, onSnapshot, writeBatch } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js";
+      const app   = initializeApp(firebaseConfig);
+      window.auth = getAuth(app); // Exponer auth globalmente
+      window.db   = getFirestore(app); // Exponer db globalmente
+      window.googleProvider = new GoogleAuthProvider(); // Exponer provider globalmente
+      window.onAuthStateChanged = onAuthStateChanged; // Exponer para usar en script.js
+      window.signInWithPopup = signInWithPopup; // Exponer para usar en script.js
+      window.signOut = signOut; // Exponer para usar en script.js
+      window.collection = collection; // Exponer para usar en script.js
+      window.doc = doc; // Exponer para usar en script.js
+      window.getDoc = getDoc; // Exponer para usar en script.js
+      window.setDoc = setDoc; // Exponer para usar en script.js
+      window.addDoc = addDoc; // Exponer para usar en script.js
+      window.updateDoc = updateDoc; // Exponer para usar en script.js
+      window.deleteDoc = deleteDoc; // Exponer para usar en script.js
+      window.query = query; // Exponer para usar en script.js
+      window.orderBy = orderBy; // Exponer para usar en script.js
+      window.onSnapshot = onSnapshot; // Exponer para usar en script.js
+      window.writeBatch = writeBatch; // Exponer para usar en script.js
 
-    const app   = initializeApp(firebaseConfig);
-    window.auth = getAuth(app); // Exponer auth globalmente
-    window.db   = getFirestore(app); // Exponer db globalmente
-    window.googleProvider = new GoogleAuthProvider(); // Exponer provider globalmente
-    window.onAuthStateChanged = onAuthStateChanged; // Exponer para usar en script.js
-    window.signInWithPopup = signInWithPopup; // Exponer para usar en script.js
-    window.signOut = signOut; // Exponer para usar en script.js
-    window.collection = collection; // Exponer para usar en script.js
-    window.doc = doc; // Exponer para usar en script.js
-    window.getDoc = getDoc; // Exponer para usar en script.js
-    window.setDoc = setDoc; // Exponer para usar en script.js
-    window.addDoc = addDoc; // Exponer para usar en script.js
-    window.updateDoc = updateDoc; // Exponer para usar en script.js
-    window.deleteDoc = deleteDoc; // Exponer para usar en script.js
-    window.query = query; // Exponer para usar en script.js
-    window.orderBy = orderBy; // Exponer para usar en script.js
-    window.onSnapshot = onSnapshot; // Exponer para usar en script.js
-    window.writeBatch = writeBatch; // Exponer para usar en script.js
+    </script>
 
-  </script>
-
-  <script type="module" src="script.js"></script>
+    <script type="module" src="script.js"></script>
 
 </body>
 </html>
